# langgraph-itinerary-planner

./: .env.example  DELIVERY_REPORT.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INSTALLATION_UPDATE_SUMMARY.md  INSTALL_PYTHON_3.13.md  MANIFEST.in  OPTION_A_IMPLEMENTATION_COMPLETE.md  PYTHON_3.13_COMPATIBILITY_FIX.md  QUICK_REFERENCE.md  QUICK_START_OPTION_A.md  README.md  README_CHAT_FEATURE.md  START_HERE.md  TRIPCRAFT_USAGE_GUIDE.md  app_with_chat.py  chat_widget.py  demo_chat_workflow.py  demo_working_system.py  docker-compose.yml  llm.py  llm_mock.py  pyproject.toml  requirements-minimal.txt  requirements.txt  setup.cfg  setup.py  setup_chat_feature.sh  supabase_client_simple.py  supabase_helpers.py  test_end_to_end.py  test_json_generation.py  test_run_2.sh  test_run_3.sh  test_tripcraft.py  test_workflow_quick.py  test_workflow_simple.py  tripcraft_config.py  (+3 more)
backend/: Dockerfile  api_server.py  requirements.txt  supabase_client.py  supabase_direct.py  supabase_mcp_client.py
backend/routes/: chat.py
docs/: architecture.md  chat_integration.md
nlp_service/: Dockerfile  actions.py  config.yml  domain.yml  flan_t5_parser.py  nlp_api.py  nlu.yml  requirements.txt
supabase/migrations/: 20251117164736_create_chat_editing_schema.sql
tests/: test_backend_api.py  test_integration.py  test_nlp_parser.py
