[project]
name = "langgraph-trip-planner"
version = "0.2.0"
description = "AI Travel Itinerary Planner with Conversational Editing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "ddgs>=9.5.5",
    "dotenv>=0.9.9",
    "fastapi>=0.109.0",
    "hf-transfer>=0.1.9",
    "httpx>=0.26.0",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
    "pydantic>=2.5.3",
    "pytest>=7.4.0",
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.6.1",
    "rasa>=3.6.0",
    "rasa-sdk>=3.6.0",
    "requests>=2.31.0",
    "sentencepiece>=0.2.1",
    "streamlit>=1.49.1",
    "supabase>=2.3.4",
    "tavily-python>=0.7.11",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "uvicorn[standard]>=0.27.0",
]
