[project]
name = "langgraph-trip-planner"
version = "0.2.0"
description = "AI Travel Itinerary Planner with Conversational Editing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.1.0",
    "duckduckgo-search>=6.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "hf-transfer>=0.1.8",
    "httpx>=0.28.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.10.0",
    "pytest>=8.3.0",
    "rapidfuzz>=3.10.0",
    "requests>=2.32.0",
    "sentencepiece>=0.2.0",
    "streamlit>=1.40.0",
    "supabase>=2.10.0",
    "tavily-python>=0.5.0",
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "uvicorn[standard]>=0.32.0",
]
