[metadata]
name = langgraph-trip-planner
version = 0.2.0
description = AI Travel Itinerary Planner with Conversational Editing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rohanbalu05/langgraph-itinerary-planner
author = LangGraph Travel Team
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.12
install_requires = file: requirements.txt
include_package_data = True

[options.packages.find]
exclude =
    tests
    tests.*
    docs
    docs.*

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    black>=23.0.0
    flake8>=6.0.0

[options.entry_points]
console_scripts =
    itinerary-planner = run:main
    itinerary-demo = demo_chat_workflow:main

[flake8]
max-line-length = 120
exclude = .git,__pycache__,build,dist,.eggs
ignore = E203,W503

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
